Create deleteButton type and component

--- a/TODO
+++ b/TODO
@@ -3,9 +3,9 @@ Header
     Dark Mode Button
 
 Main
-    Todo List Container
-    List Item
-    Add Item button
+X   Todo List Container
+X   List Item
+X   Add Item button
     Remove Item(s) button
 
 Backend:
